# collaborative_text_editor

./: .gitignore  QTcpServerMio.cpp  QUtenteServer.cpp  Server.cpp  client.txt
Client2/: CRDT.cpp  CRDT.h  Char.cpp  Char.h  DocOperation.cpp  DocOperation.h  PdsClient.pro  PdsClient.pro.user.ecd2186  QUser.cpp  QUser.h  QUtente.cpp  QUtente.h  ServerSelection.cpp  WorkerSocketClient.cpp  WorkerSocketClient.h  WorkerSocketClient_BACKUP_38467.cpp  WorkerSocketClient_BASE_38467.cpp  WorkerSocketClient_LOCAL_38467.cpp  WorkerSocketClient_REMOTE_38467.cpp  blockreader.cpp  blockreader.h  blockwriter.cpp  clickablelabel.cpp  editprofile.cpp  editprofile.h  loginDialog.cpp  loginDialog.h  main.cpp  newprofiledialog.cpp  newprofiledialog.h  recentdocsdialogs.cpp  recentdocsdialogs.h  serverselection.h  textedit.cpp  textedit.h  textedit.qrc  workerdocclient.cpp  workerdocclient.h
MASTER/: CMakeLists.txt  CRDT.cpp  CRDT.h  Client.h  CmakeListsClient.txt  DocOperation.cpp  DocOperation.h  Fakesignal.h  QTcpServerMio.h  QUser.cpp  QUser.h  QUtente.cpp  QUtente.h  QUtenteServer.cpp  QUtenteServer.h  Server.cpp  Server.h  WorkerDoc.cpp  WorkerDoc.h  WorkerSocket.cpp  WorkerSocket.h  WorkerSocketClient.cpp  WorkerSocketClient.h  editprofile.cpp  editprofile.h  fakesignal.cpp  loginDialog.cpp  loginDialog.h  main.cpp  mainServer.cpp  newprofiledialog.cpp  newprofiledialog.h  recentdocsdialogs.cpp  recentdocsdialogs.h  textedit.cpp  textedit.h  textedit.pro  textedit.pro.user.75b8e8c  textedit.pro.user.ae2f2ae
PDSClient/: CRDT.cpp  CRDT.h  DocOperation.h  PDSClient.pro  QUser.cpp  (+20 more)
(+60 files in other folders)
